cmake_minimum_required(VERSION 3.0.0)
project(http_server VERSION 0.1.0)

include(CTest)
enable_testing()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -O3 -pthread ")
set(DCMAKE_BUILD_TYPE "Release")
include_directories(./include ./http_sever)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin )
aux_source_directory(./http_sever server)
aux_source_directory(./TCP TCP)
aux_source_directory(./thread Thread)
aux_source_directory(./TIME TIME)
aux_source_directory(./utils Utils)
aux_source_directory(./work  work)
add_executable(httpsever ${server} ${TCP} ${Thread} ${TIME} ${Utils} ${work})
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})

